CoCRM/myproject/force-app/main/default/objects/Interactions__c/Interactions__c.object-meta.xml
<CustomObject>
    <label>Interaction</label>
    <nameField>
        <displayFormat>Int# {0}</displayFormat>
        <label>Interaction Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>