CoCRM/myproject/force-app/main/default/objects/Interactions__c/fields/First_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>First_Point_of_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Touch Point</label>
    <type>Checkbox</type>
</CustomField>