CoCRM/myproject/force-app/main/default/objects/Interactions__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Conversation</fullName>
            </value>
            <value>
                <fullName>In Person Conversation</fullName>
            </value>
            <value>
                <fullName>Met for Coffee</fullName>
            </value>
            <value>
                <fullName>Met for Lunch</fullName>
            </value>
            <value>
                <fullName>One-on-One</fullName>
            </value>
            <value>
                <fullName>Direct Mailing</fullName>
                <isActive>false</isActive>
                <label>Direct Mailing</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Event</fullName>
                <isActive>false</isActive>
                <label>Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>