CoCRM/myproject/force-app/main/default/objects/Interactions__c/fields/Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Date__c</fullName>
    <label>Interaction Date</label>
    <type>Date</type>
</CustomField>