CoCRM/myproject/force-app/main/default/objects/Interactions__c/fields/Interaction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Notes__c</fullName>
    <label>Interaction Notes</label>
    <type>TextArea</type>
</CustomField>