CoCRM/myproject/force-app/main/default/objects/Interactions__c/fields/Interaction_With__c.field-meta.xml
<CustomField>
    <fullName>Interaction_With__c</fullName>
    <label>Interaction With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rabbi</fullName>
            </value>
            <value>
                <fullName>Rebbetzin</fullName>
            </value>
            <value>
                <fullName>Student Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>