CoCRM/myproject/force-app/main/default/objects/Interactions__c/recordTypes/Donor.recordType-meta.xml
<RecordType>
    <fullName>Donor</fullName>
    <active>false</active>
    <label>Donor</label>
</RecordType>