CoCRM/myproject/force-app/main/default/objects/Interactions__c/recordTypes/Student.recordType-meta.xml
<RecordType>
    <fullName>Student</fullName>
    <active>true</active>
    <label>Student</label>
</RecordType>