CoCRM/myproject/force-app/main/default/objects/Interactions__c/validationRules/Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Required</fullName>
    <active>true</active>
    <description>Date is Required for Interaction</description>
    <errorConditionFormula>ISBLANK(Interaction_Date__c)</errorConditionFormula>
    <errorDisplayField>Interaction_Date__c</errorDisplayField>
    <errorMessage>Interaction Date is Required</errorMessage>
</ValidationRule>